syntax = "proto3";

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
//import "google/protobuf/any.proto";

package feedlightpb;

message Feedback {
  string feedback = 1;
  int32 score = 2;
  bool similar = 3;
  bool dissimilar = 4;
  string response = 5;
  bool share_publicly = 6;
  int64 id = 8;

  int64 created_at = 7;
  int64 updated_at = 9;
}

message SimilarFeedbackRequest {
  string domain = 2;

  Feedback feedback = 1 [(gogoproto.nullable) = false];
}

message SimilarFeedbackResponse {
  repeated Feedback feedback = 1 [(gogoproto.nullable) = false];
}

message SubmitFeedbackRequest {
  string domain = 4;

  string email = 1;
  Feedback feedback = 2 [(gogoproto.nullable) = false];
  repeated Feedback similar = 3 [(gogoproto.nullable) = false];
}

message SubmitFeedbackResponse {
  int64 id = 1;
}

message FeedbackRequest {
  int64 id = 1;
}

message FeedbackResponse {
  Feedback feedback = 1 [(gogoproto.nullable) = false];
  string domain = 2;
  repeated Feedback similar = 3 [(gogoproto.nullable) = false];
}


service FeedbackService {
  rpc SimilarFeedback(SimilarFeedbackRequest) returns (SimilarFeedbackResponse) {
    option (google.api.http) = {
      post: "/api/v1/FeedbackService/SimilarFeedback"
      body: "*"
    };
  }

  rpc SubmitFeedback(SubmitFeedbackRequest) returns (SubmitFeedbackResponse) {
    option (google.api.http) = {
      post: "/api/v1/FeedbackService/SubmitFeedback"
      body: "*"
    };
  }

  rpc Feedback(FeedbackRequest) returns (FeedbackResponse) {
    option (google.api.http) = {
      post: "/api/v1/FeedbackService/Feedback"
      body: "*"
    };
  }
}


// Status is used for the GRPC errors sent to the UI.
message Status {
  // The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
  int32 code = 2;

  // A developer-facing error message, which should be in English. Any
  // user-facing error message should be localized and sent in the
  // [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
  string message = 1;

  // A list of messages that carry the error details.  There will be a
  // common set of message types for APIs to use.
  //repeated google.protobuf.Any details = 3;
}
